--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -74,3 +74,11 @@
   color: #000000;
   border: none;
 }
+.link a {
+  text-decoration: none;
+  color: black;
+}
+.myproject-div:hover {
+  width: 50%;
+  height: 50%;
+}
