--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -1,6 +1,6 @@
 html,
 body {
-  background-color: hsl(255, 0%, 10%);
+  background: #00000f;
 }
 .App {
   text-align: center;
@@ -12,20 +12,17 @@ body {
   align-items: center;
   justify-content: center;
 }
-.avatar img {
-  border-radius: 50%;
-  height: 200px;
-  width: 200px;
-  position: relative;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.avatar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 .formcontact form {
   display: flex;
   flex-direction: column;
   padding: 20px;
+  color: #ffffff;
 }
 .formcontact form input {
   margin: 10px;
@@ -49,7 +46,7 @@ body {
 }
 .link a {
   text-decoration: none;
-  color: black;
+  color: hsl(120, 30%, 100%);
 }
 .myproject-div:hover {
   width: 50%;
