--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -1,3 +1,70 @@
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  background-color: #000000;
+  flex-wrap: wrap;
+}
+
+.portfolio {
+  margin-top: 20px;
+  width: auto;
+  height: auto;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  color: white;
+  border: 1px solid white;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  border-bottom: 1px solid black;
+  height: 80px;
+  padding: 10px;
+  margin: 20px;
+}
 .title {
   font-size: "50px";
+}
+
+img {
+  width: 70px;
+  height: 70px;
+  margin-right: 20px;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: col;
+  justify-content: end;
+  margin-right: 20px;
+}
+
+a {
+  margin: 20px;
+  font-size: 1rem;
+  text-decoration: none;
+  color: white;
+}
+
+.presentation-text p {
+  text-align: justify;
+  padding: 20px;
+}
+
+.skills {
+  margin: 20px;
+  padding: 20px;
+}
+
+.skills ul {
 }
