fix: change principal-color
Change the principal-color in the index.css

--- a/mifirstpage/src/index.css
+++ b/mifirstpage/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --principal-color: #000000;
+  --principal-color: #ffffff;
   --secondary-color: #b3adab;
   --font-size-principal: 2rem;
   --font-size-secondary: 1rem;
