fix: change colors
Change colors principal-color and secondary-color

--- a/mifirstpage/src/index.css
+++ b/mifirstpage/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --principal-color: #ffffff;
-  --secondary-color: #b3adab;
+  --principal-color: #b5adab;
+  --secondary-color: #ffffff;
   --font-size-principal: 2rem;
   --font-size-secondary: 1rem;
   --margin-bottom-principal: 500px;
