fix: Change colors and new position navbar
Change the colors principa, secondary and new position "fixed" for the
component navbar

--- a/mifirstpage/src/index.css
+++ b/mifirstpage/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --principal-color: #b5adab;
-  --secondary-color: #ffffff;
+  --principal-color: #eef3fb;
+  --secondary-color: #fdfdfd;
   --font-size-principal: 2rem;
   --font-size-secondary: 1rem;
   --margin-bottom-principal: 500px;
