--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -10,7 +10,6 @@ body {
 
 .container {
   width: 1500px;
-  margin-top: 40px;
   margin-left: 20px;
   margin-right: 20px;
   padding: 100px;
@@ -25,6 +24,11 @@ body {
   margin: 10px;
   margin-bottom: 200px;
   font-size: 2rem;
+  position: fixed;
+  top: 0;
+  left: 30%;
+  width: 100%;
+  z-index: 1000;
 }
 
 .title {
