--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -30,8 +30,9 @@ body {
   width: fit-content;
   z-index: 1000;
   padding: 1rem;
-  box-shadow:5px 5px 10px #babecc,
-             -5px -5px 10px #ffffff;
+  box-shadow:
+    5px 5px 10px #babecc,
+    -5px -5px 10px #ffffff;
   border-radius: 15px;
 }
 
@@ -64,7 +65,6 @@ body {
   font-size: 2rem;
   font-style: none;
   margin-bottom: var(--margin-bottom-principal);
-  font-style: italic;
 }
 
 .skills {
