--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -42,10 +42,10 @@ body {
 }
 
 .avatar-img {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   margin: 30px;
-  border-radius: 64px;
+  border-radius: 50%;
 }
 
 .presentation-text {
