--- a/mifirstpage/src/index.css
+++ b/mifirstpage/src/index.css
@@ -1,6 +1,6 @@
 :root {
-  --principal-color: #dddddd;
-  --secondary-color: #fcfcfc;
+  --principal-color: #0d1b2a;
+  --secondary-color: #dddddd;
   --font-size-principal: 2rem;
   --font-size-secondary: 1rem;
   --margin-bottom-principal: 500px;
