--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -25,14 +25,15 @@ body {
   margin-bottom: 200px;
   font-size: 2rem;
   position: fixed;
-  top: 0;
-  left: 40%;
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: fit-content;
   z-index: 1000;
   padding: 1rem;
   box-shadow:
     5px 5px 10px #0d1b2a,
-    -5px -5px 10px #babecc;
+    -2px -2px 10px #babecc;
   border-radius: 15px;
 }
 
