--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -70,3 +70,90 @@ ol li {
 
 .projects-psys {
 }
+
+/* Media queries para monitores grandes */
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+    padding: 32px;
+  }
+  .title {
+    font-size: 4rem;
+  }
+  .presentation-text {
+    font-size: 2.2rem;
+    padding: 60px;
+  }
+  .avatar-img {
+    width: 350px;
+    height: 350px;
+  }
+}
+
+/* Media queries para tablets */
+@media (max-width: 900px) {
+  .container {
+    max-width: 90vw;
+    padding: 16px;
+  }
+  .navbar {
+    font-size: 1.5rem;
+    margin-bottom: 100px;
+    padding: 0.7rem;
+    top: 3%;
+  }
+  .title {
+    font-size: 2.2rem;
+    margin-top: 60px;
+  }
+  .avatar-img {
+    width: 200px;
+    height: 200px;
+  }
+  .presentation-text {
+    font-size: 1.2rem;
+    padding: 20px;
+    margin: 10px;
+  }
+  .estudies-li {
+    font-size: 1.2rem;
+    margin-bottom: 100px;
+  }
+  .skills {
+    margin-bottom: 100px;
+  }
+}
+
+/* Media queries para móviles */
+@media (max-width: 600px) {
+  .container {
+    max-width: 100vw;
+    padding: 8px;
+  }
+  .navbar {
+    font-size: 1rem;
+    margin-bottom: 60px;
+    padding: 0.3rem;
+    top: 2%;
+  }
+  .title {
+    font-size: 1.2rem;
+    margin-top: 30px;
+  }
+  .avatar-img {
+    width: 120px;
+    height: 120px;
+  }
+  .presentation-text {
+    font-size: 1rem;
+    padding: 10px;
+    margin: 5px;
+  }
+  .estudies-li {
+    font-size: 1rem;
+    margin-bottom: 60px;
+  }
+  .skills {
+    margin-bottom: 60px;
+  }
+}
