--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -28,10 +28,6 @@ body {
   border-radius: 15px;
 }
 
-.title {
-  font-size: 3rem;
-  margin-top: 100px;
-}
 
 .avatar-img {
   width: 300px;
@@ -65,24 +61,20 @@ ol li {
   font-size: 1rem;
 }
 
-.projects-personal {
-}
 
-.projects-psys {
-}
 
 /* Media queries para monitores grandes */
 @media (min-width: 1200px) {
   .container {
     max-width: 1200px;
     padding: 32px;
-  }
-  .title {
-    font-size: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
   }
   .presentation-text {
     font-size: 2.2rem;
-    padding: 60px;
   }
   .avatar-img {
     width: 350px;
@@ -129,28 +121,28 @@ ol li {
   .container {
     max-width: 100vw;
     padding: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
   }
   .navbar {
-    font-size: 1rem;
+    font-size: 10px;
     margin-bottom: 60px;
     padding: 0.3rem;
     top: 2%;
-  }
-  .title {
-    font-size: 1.2rem;
-    margin-top: 30px;
   }
   .avatar-img {
     width: 120px;
     height: 120px;
   }
   .presentation-text {
-    font-size: 1rem;
-    padding: 10px;
-    margin: 5px;
+    font-size: 10px;
+    padding: 0;
+    margin: 0;
   }
   .estudies-li {
-    font-size: 1rem;
+    font-size: 10px;
     margin-bottom: 60px;
   }
   .skills {
