--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -149,3 +149,48 @@ ol li {
     margin-bottom: 60px;
   }
 }
+
+
+@media (max-width: 360px) {
+  .container {
+    max-width: 100vw;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+  }
+  .navbar {
+    font-size: 10px;
+    margin-bottom: 60px;
+    padding: 0.3rem;
+    top: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    text-align: center;
+    width: fit-content;
+  }
+  .avatar-img {
+    width: 120px;
+    height: 120px;
+  }
+  .presentation-text {
+    font-size: 10px;
+    padding: 0;
+    margin: 0;
+  }
+  .estudies-li {
+    font-size: 10px;
+    margin-bottom: 60px;
+  }
+  .skills {
+    margin-bottom: 60px;
+  }
+  .projects {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+}
