--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -2,6 +2,14 @@ body {
   font-family: "Cantarell";
   background: var(--principal-color);
   color: #dddddd;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 .container {
