--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -189,7 +189,7 @@ ol li {
 }
 
 
-@media (max-width: 360px) {
+@media (min-width: 360px) {
   body {
     display: flex;
     flex-direction: column;
