--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -3,11 +3,11 @@ body {
   background: var(--principal-color);
   color: #dddddd;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-items: center;
-  margin: 0;
-  padding: 0;
+  margin: 10px;
+  padding: 10px;
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
@@ -24,9 +24,8 @@ body {
   margin-bottom: 200px;
   font-size: 2rem;
   position: fixed;
-  top: 5%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 10%;
+  left: 0;
   width: fit-content;
   z-index: 1000;
   padding: 1rem;
@@ -35,7 +34,6 @@ body {
     -2px -2px 10px #babecc;
   border-radius: 15px;
 }
-
 
 .avatar-img {
   width: 300px;
@@ -69,8 +67,6 @@ ol li {
   font-size: 1rem;
 }
 
-
-
 /* Media queries para monitores grandes */
 @media (min-width: 1200px) {
   body {
@@ -78,8 +74,8 @@ ol li {
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 10px;
     box-sizing: border-box;
     scroll-behavior: smooth;
   }
@@ -107,8 +103,8 @@ ol li {
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 10px;
     box-sizing: border-box;
     scroll-behavior: smooth;
   }
@@ -151,8 +147,8 @@ ol li {
     flex-direction: column;
     align-items: center;
     justify-items: center;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 10px;
     box-sizing: border-box;
     scroll-behavior: smooth;
   }
@@ -188,15 +184,14 @@ ol li {
   }
 }
 
-
 @media (min-width: 360px) {
   body {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-items: center;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 10px;
     box-sizing: border-box;
     scroll-behavior: smooth;
   }
