--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -71,7 +71,7 @@ ol li {
 @media (min-width: 1200px) {
   body {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-items: center;
     margin: 10px;
