--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -24,6 +24,8 @@ body {
   margin-bottom: 200px;
   font-size: 2rem;
   position: fixed;
+  display: flex;
+  flex-direction: column;
   top: 10%;
   left: 0;
   width: fit-content;
