--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -93,6 +93,8 @@ ol li {
     font-size: 2.2rem;
   }
   .avatar-img {
+    display: flex;
+    flex-direction: column;
     width: 350px;
     height: 350px;
   }
@@ -115,6 +117,8 @@ ol li {
     padding: 16px;
   }
   .navbar {
+    display: flex;
+    flex-direction: column;
     font-size: 1.5rem;
     margin-bottom: 100px;
     padding: 0.7rem;
@@ -163,6 +167,8 @@ ol li {
     justify-items: center;
   }
   .navbar {
+    display: flex;
+    flex-direction: column;
     font-size: 10px;
     margin-bottom: 60px;
     padding: 0.3rem;
