--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -25,7 +25,7 @@ body {
   font-size: 2rem;
   position: fixed;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   top: 10%;
   left: 0;
   width: fit-content;
@@ -73,7 +73,7 @@ ol li {
 @media (min-width: 1200px) {
   body {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-items: center;
     margin: 10px;
