--- a/mifirstpage/src/App.css
+++ b/mifirstpage/src/App.css
@@ -118,7 +118,7 @@ ol li {
   }
   .navbar {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     font-size: 1.5rem;
     margin-bottom: 100px;
     padding: 0.7rem;
@@ -168,7 +168,7 @@ ol li {
   }
   .navbar {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     font-size: 10px;
     margin-bottom: 60px;
     padding: 0.3rem;
@@ -218,7 +218,7 @@ ol li {
     padding: 0.3rem;
     top: 2%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-items: center;
     text-align: center;
